Fix overflow in graph 1

--- a/style.css
+++ b/style.css
@@ -114,9 +114,11 @@ img{
 #graphScrollbarWrapper{
     aspect-ratio: 1.72;
     display: flex;
+    overflow-x: auto;       
     width: 100%;
     max-width: 850px;
     margin: auto;
+
 }
 
 #sideView {
